# better-valheim

./: .clang-format  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: gl.c.16A64C8AC1F5F4AE.idx  gl.h.F01BB7058F8A1C33.idx  khrplatform.h.E110E72827C4A96F.idx  main.cpp.9BBE395913219433.idx
include/engine/: ebo.hpp  shader.hpp  shader_program.hpp  texture.hpp  vao.hpp  vbo.hpp
include/game/: circular_object.hpp  ellipses_object.hpp  object.hpp  rectangle_object.hpp  solid_object.hpp  square_object.hpp  triangle_object.hpp  world.hpp
resources/shaders/: debug.fs  debug.vs  triangle.fs  triangle.vs
src/: gl.c  main.cpp
src/engine/: shader.cpp
src/game/: circlular_object.cpp  ellipses_object.cpp  rectangle_object.cpp  triangle_object.cpp  world.cpp
